--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -27,7 +27,7 @@ $exclude: (
     // igx-slider,
     // igx-snackbar,
     // igx-switch,
-    // igx-tab-bar,
+    // igx-bottom-nav,
     // igx-toast
 );
 // Generating a palette
