refactor(igx-grid): remove keyboard navigation in row, remove tests, #812

--- a/src/grid/row.component.html
+++ b/src/grid/row.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="rowSelectable">
-    <div class="igx-grid__cbx-selection" (keydown)="handleArrows($event)">
+    <div class="igx-grid__cbx-selection">
         <igx-checkbox [checked]="isSelected" (change)="onCheckboxClick($event)" disableRipple="true" [aria-label]="rowCheckboxAriaLabel"></igx-checkbox>
     </div>
 </ng-container>
