style(tabs): add styles to remove the arrow space

--- a/demos/app/tabs/sample.component.html
+++ b/demos/app/tabs/sample.component.html
@@ -221,64 +221,30 @@
                 <igx-icon name="more_vert"></igx-icon>
             </igx-navbar>
             <igx-tabs tabsType="contentfit">
-                <igx-tabs-group label="Tab 1 Looooooooooong Cooooooooooooontent">
+                <igx-tabs-group label="Tab one">
                     <div class="my-tab-content">
-                        <h3>Tab 1 Content</h3>
+                        <h3>Tab one Content</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
                             consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna
                             arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus. Donec efficitur
                             purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod
                             volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus.
                             Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis
-                            vulputate in quis nisl.</p>
+                            vulputate in quis nisl.
+                        </p>
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab2">
+                <igx-tabs-group label="Tab two">
                     <div class="my-tab-content">
-                        <h3>Tab 2 Content</h3>
+                        <h3>Tab two Content</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
                             consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna
                             arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus. Donec efficitur
                             purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod
                             volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus.
                             Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis
-                            vulputate in quis nisl.</p>
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab3 Tab3 Tab3">
-                    <div class="my-tab-content">
-                        <h3>Tab 3 Content</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
-                            consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna
-                            arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus. Donec efficitur
-                            purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod
-                            volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus.
-                            Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis
-                            vulputate in quis nisl.</p>
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab4 Tab4 Tab4 Tab4 Tab4">
-                    <div class="my-tab-content">
-                        <h3>Tab 4 Content</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
-                            consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna
-                            arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus. Donec efficitur
-                            purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod
-                            volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus.
-                            Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis
-                            vulputate in quis nisl.</p>
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab5 Tab5 Tab5 Tab5 Tab5">
-                    <div class="my-tab-content">
-                        <h3>Tab 5 Content</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
-                            consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna
-                            arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus. Donec efficitur
-                            purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod
-                            volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus.
-                            Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis
-                            vulputate in quis nisl.</p>
+                            vulputate in quis nisl.
+                        </p>
                     </div>
                 </igx-tabs-group>
             </igx-tabs>
