--- a/demos/app/grid-performance/sample.component.html
+++ b/demos/app/grid-performance/sample.component.html
@@ -1,6 +1,6 @@
 <div class="sample-wrapper dark-grid">
     <igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)" [width]="'800px'" [height]="'600px'" rowSelectable="true">
-        <igx-column *ngFor="let c of columns" [resizable]="true" [maxWidth]="'350px'" [sortable]="true" [filterable]="true" [field]="c.field" [header]="c.field" [width]="c.width">
+        <igx-column *ngFor="let c of columns" [sortable]="true" [filterable]="true" [field]="c.field" [header]="c.field" [width]="c.width">
         </igx-column>
     </igx-grid>
     <br/>
