--- a/src/core/styles/components/grid/_grid-component.scss
+++ b/src/core/styles/components/grid/_grid-component.scss
@@ -91,6 +91,14 @@
         @extend %grid-cell--fixed-width !optional;
     }
 
+    @include e(th-resize-handle) {
+        @extend %grid__resize-handle !optional;
+    }
+
+    @include e(th-resize-line) {
+        @extend %grid__resize-line !optional;
+    }
+
     @include e(td) {
         @extend %grid-cell-display !optional;
     }
