fix(datePicker): set focus into the dialog when calendar appears
Closes #983

--- a/src/dialog/dialog-content.component.html
+++ b/src/dialog/dialog-content.component.html
@@ -1,4 +1,4 @@
-<div #dialog tabindex="-1" class="igx-dialog" *ngIf="isOpen" [@fadeInOut]="state" (click)="onDialogSelected($event)">
+<div #dialog class="igx-dialog" *ngIf="isOpen" [@fadeInOut]="state" (click)="onDialogSelected($event)">
     <div #dialogWindow class="igx-dialog__window" [@slideIn]="state" [attr.role]="role" [attr.aria-labelledby]="titleId">
         <div *ngIf="title" [attr.id]="titleId" class="igx-dialog__window-title">
             {{ title }}
