fix(selection-controls): add min-width to radio, checkbox, and switch

--- a/src/core/styles/components/checkbox/_checkbox-theme.scss
+++ b/src/core/styles/components/checkbox/_checkbox-theme.scss
@@ -108,6 +108,7 @@
         cursor: pointer;
         width: $size;
         height: $size;
+        min-width: $size;
         border-width: $border-width;
         border-style: solid;
         border-color: map-get($this, 'empty-color');
