fix(grid): add some space around the resize line
This is to prevent unwanted selection of elements below the resize line.

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -405,5 +405,21 @@
         width: 4px;
         background-color: map-get($this, 'resize-line-color');
         z-index: 2;
+
+        &::before,
+        &::after {
+            position: absolute;
+            content: '';
+            height: 100%;
+            width: 96px;
+        }
+
+        &::before {
+            right: 100%;
+        }
+
+        &::after {
+            left: 100%;
+        }
     }
 }
