--- a/demos/app/list-performance/sample.component.html
+++ b/demos/app/list-performance/sample.component.html
@@ -12,20 +12,18 @@
             </igx-suffix>
         </igx-input-group>
 
-        <div class="list-sample">
-            <igx-list>
-                <igx-list-item [isHeader]="true">Contacts</igx-list-item>
-                <div [style.height]="'518px'">
-                    <igx-list-item igxRipple="pink" igxRippleTarget=".igx-list__item" *igxFor="let item of data | igxFilter: fo1; scrollOrientation : 'vertical'; containerSize: '500px'; itemSize: '50px'">
-                        <div class="item">
-                            <igx-avatar [src]="item.avatar" roundShape="true"></igx-avatar>
-                            <span igxLabel>{{item.text}}</span>
-                            <igx-icon name="star" [class.favorite]="item.favorite"></igx-icon>
-                        </div>
-                    </igx-list-item>
-                </div>
-            </igx-list>
-        </div>
+        <igx-list>
+            <igx-list-item [isHeader]="true">Contacts</igx-list-item>
+            <div class="virtualized-items">
+                <igx-list-item igxRipple="pink" igxRippleTarget=".igx-list__item" *igxFor="let item of data | igxFilter: fo1; scrollOrientation : 'vertical'; containerSize: '500px'; itemSize: '50px'">
+                    <div class="item">
+                        <igx-avatar [src]="item.avatar" roundShape="true"></igx-avatar>
+                        <span igxLabel>{{item.text}}</span>
+                        <igx-icon name="star" [class.favorite]="item.favorite"></igx-icon>
+                    </div>
+                </igx-list-item>
+            </div>
+        </igx-list>
 
     </article>
 </div>
