--- a/src/grid/grid-header.component.html
+++ b/src/grid/grid-header.component.html
@@ -2,12 +2,13 @@
     {{ column.header || column.field }}
 </ng-template>
 
-<span class="title">
+<span class="igx-grid__th-title">
     <ng-container *ngTemplateOutlet="column.headerTemplate ? column.headerTemplate : defaultColumn; context: { $implicit: column }">
     </ng-container>
 </span>
 
 <div class="igx-grid__th-icons">
+    <igx-icon class="sort-icon">{{sortingIcon}}</igx-icon>
     <igx-grid-filter [column]="column" *ngIf="column.filterable"></igx-grid-filter>
 </div>
 
@@ -16,6 +17,7 @@
       (mouseover)="onResizeAreaMouseOver()"
       [style.cursor]="resizeCursor"
       style="display: flex;position: absolute;height: 100%;right:0%;width: 4px;">
+
     <div *ngIf="showResizer" igxResizer
         [restrictHResizeMax]="restrictResizeMax"
         [restrictHResizeMin]="restrictResizeMin"
@@ -24,4 +26,5 @@
         [style.height.px]="resizerHeight"
         style="width: 4.5px;z-index: 4;background-color: #006db6; position:absolute;cursor:col-resize">
     </div>
+
 </span>
