--- a/demos/app/tabs/sample.component.html
+++ b/demos/app/tabs/sample.component.html
@@ -1,8 +1,8 @@
 <div class="sample-wrapper">
     <page-header title="Tabs" description="Allows the user to navigate between different content displayed in one view. The tabs are placed at the top and allows scrolling."></page-header>
 
-    <div class="items-wrapper">
-        <div class="items-wrapper__item ">
+    <div class="items-wrapper tabs-demo">
+        <div class="items-wrapper__item">
             <h3 class="sample-title">Different size tabs</h3>
             <igx-tabs>
                 <igx-tabs-group label="Tab 1" icon="folder">
