--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -49,11 +49,14 @@ $my-tabs-theme: igx-tabs-theme(
 
 .items-wrapper__item--blue {
     @include igx-tabs($my-tabs-theme);
+}
 
-    .igx-tabs__header {
-        z-index: 5;
-        position: relative;
-    }
+$my-nav-theme: igx-navbar-theme(
+    $disable-shadow: 'true'
+);
+
+.tabs-demo {
+    @include igx-navbar($my-nav-theme);
 }
 
 // @mixin gen-color-class($name, $variant, $prefix, $suffix) {
