--- a/src/core/styles/components/navbar/_navbar-theme.scss
+++ b/src/core/styles/components/navbar/_navbar-theme.scss
@@ -19,7 +19,8 @@
     $background: null,
     $text-color: null,
     $idle-icon-color: null,
-    $hover-icon-color: null
+    $hover-icon-color: null,
+    $disable-shadow: 'false'
 ) {
     @if not($text-color) and $background {
         $text-color: text-contrast($background);
@@ -37,7 +38,8 @@
         background: $background,
         text-color: $text-color,
         idle-icon-color: $idle-icon-color,
-        hover-icon-color: $hover-icon-color
+        hover-icon-color: $hover-icon-color,
+        disable-shadow: $disable-shadow
     );
 }
 
@@ -57,7 +59,12 @@
 
     $this: extend($default-theme, $theme);
 
-    // @debug $this;
+
+    $nav-shadow: igx-elevation($elevations, 4);
+
+    @if map-get($this, 'disable-shadow') == 'true' {
+        $nav-shadow: none;
+    }
 
     $navbar-padding: 0 em(16px);
     $navbar-title-fz: em(18px, 16px);
@@ -75,7 +82,7 @@
         padding: $navbar-padding;
         background: map-get($this, 'background');
         color: map-get($this, 'text-color');
-        box-shadow: igx-elevation($elevations, 4);
+        box-shadow: $nav-shadow;
         z-index: 4;
     }
 
