feat(grid): Initial grid search implementations #961

--- a/src/grid/cell.component.html
+++ b/src/grid/cell.component.html
@@ -1,4 +1,4 @@
-<ng-template #defaultCell>
+<ng-template #defaultCell igxTextHighlight [cssClass]="highlightClass" [activeCssClass]="activeHighlightClass">
     {{ formatter ? formatter(value) : value }}
 </ng-template>
 <ng-template #inlineEditor let-cell="cell">
