fix(grid-summaries): fix summaries width
Make summaries to work no matter if there is a set width to the columns

Closes #1050

--- a/src/core/styles/components/grid-summary/_grid-summary-component.scss
+++ b/src/core/styles/components/grid-summary/_grid-summary-component.scss
@@ -42,4 +42,8 @@
         @extend %igx-grid-summary !optional;
         @extend %igx-grid-summary--empty !optional;
     }
+
+    @include m(fw) {
+        @extend %grid-summary--fixed-width !optional;
+    }
 }
