--- a/src/grid/grid-summary.component.html
+++ b/src/grid/grid-summary.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="column.hasSummary">
     <ng-container *ngFor="let summary of resolveSummaries">
-        <div class="{{summaryClass()}}">
+        <div class="{{itemClass}}">
             <span class="igx-grid-summary__label" title="{{ summary.label }}">{{ summary.label }}</span>
             <span class="igx-grid-summary__result" title="{{ summary.summaryResult }}">{{ summary.summaryResult }}</span>
         </div>
