chore(igxDropDown): Add keyboard navigation

--- a/src/drop-down/dropDown.component.html
+++ b/src/drop-down/dropDown.component.html
@@ -1,4 +1,4 @@
-<div igxToggle (onOpen)="dropDown()">
+<div igxToggle (onOpen)="open()" (onClose)="close()">
     <div *ngIf="!toggle.collapsed">
         <ng-content></ng-content>
     </div>
