--- a/src/grid/grid-header.component.html
+++ b/src/grid/grid-header.component.html
@@ -7,8 +7,8 @@
     </ng-container>
 </span>
 
-<div class="igx-grid__th-icons">
-    <igx-icon class="sort-icon">{{sortingIcon}}</igx-icon>
+<div class="igx-grid__th-icons" *ngIf="column.sortable || column.filterable">
+    <igx-icon class="sort-icon" *ngIf="column.sortable">{{sortingIcon}}</igx-icon>
     <igx-grid-filter [column]="column" *ngIf="column.filterable"></igx-grid-filter>
 </div>
 
