--- a/demos/app/drop-down/sample.component.html
+++ b/demos/app/drop-down/sample.component.html
@@ -1,7 +1,7 @@
 <button (click)="toggleDropDown()">Toggle</button>
-<igx-drop-down [width]="width" (itemClicked)="itemClicked($event)" (onSelection)="onSelection($event)">
-    <igx-drop-down-item *ngFor="let item of items">
-        {{ item }}
+<igx-drop-down (itemClicked)="itemClicked($event)">
+    <igx-drop-down-item *ngFor="let item of items" isDisabled={{item.disabled}}>
+        {{ item.field }}
     </igx-drop-down-item>
     <igx-drop-down-item isSelected="true">Selected</igx-drop-down-item>
 </igx-drop-down>
