--- a/demos/app/date-picker/sample.component.html
+++ b/demos/app/date-picker/sample.component.html
@@ -19,7 +19,7 @@
             <h4 class="sample-title">Date Picker with passed date and custom formatter.</h4>
             <p class="sample-description">Detailed description to be added.</p>
             <div class="preview">
-                <igx-datePicker [value]="date" [vertical]="true" [formatter]="formatter"></igx-datePicker>
+                <igx-datePicker [value]="date" [vertical]="true" [formatter]="formatter" (onClose)="onCloseHandler($event)"></igx-datePicker>
             </div>
         </article>
     </section>
