refactor(grid): don't hide header icons container conditionally
Dynamic hiding of the icons container was set with a previous container,
but it causes jumps in header height on chunk change if there's no
filtering or sorting in any of the columns in the chunk.

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -329,6 +329,10 @@
         min-width: 39px; /* sort-icon width + filtering toggle icon width */
         height: 24px;
 
+        &:empty {
+            min-width: 0;
+        }
+
         .sort-icon {
             width: rem(15px);
             height: rem(15px);
